--- a/explore.ipynb
+++ b/explore.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "# load /home/eo287/mnt/s3_ccta/summaries/ccta_series_headers_only_E100138698.csv\n",
-    "df = pd.read_csv('/home/eo287/mnt/s3_ccta/summaries/ccta_series_headers_only_E100138698.csv')\n",
+    "df = pd.read_csv('/home/eo287/mnt/s3_ccta/summaries/ccta_series_headers_only_E***.csv')\n",
     "print(df.head())"
    ]
   },
