--- a/explore.ipynb
+++ b/explore.ipynb
@@ -7,26 +7,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load the images in total\n",
     "import pandas as pd\n",
-    "# load /home/eo287/mnt/s3_ccta/summaries/ccta_series_headers_only_E100138698.csv\n",
-    "df = pd.read_csv('/home/eo287/mnt/s3_ccta/summaries/ccta_series_headers_only_E***.csv')\n",
-    "print(df.head())"
+    "df = pd.read_csv('/home/eo287/mnt/s3_ccta/summaries/ccta_series_headers_only.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdee913d",
+   "id": "ba65cfb4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns.to_list()"
+    "# How many studies have we processed?\n",
+    "df[\"StudyFolder\"].nunique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25bd7001",
+   "id": "3688cd2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,39 +37,393 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d76a14",
+   "id": "5b8a9a27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show all columsn\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "df"
+    "# Keep if ImageType contains ORIGINAL, PRIMARY, AXIAL\n",
+    "df_filtered = df[df['ImageType'].str.contains('ORIGINAL') &\n",
+    "                 df['ImageType'].str.contains('PRIMARY') &\n",
+    "                 df['ImageType'].str.contains('AXIAL')]\n",
+    "df_filtered[\"StudyFolder\"].nunique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8014707d",
+   "id": "99d104c6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SliceThickness\n",
-    "print(df['SliceThickness'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "623249e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# keep if slie thickness is < 1\n",
-    "df = df[df['SliceThickness'] < 1]\n",
+    "# Apply some heuristics\n",
+    "\n",
+    "# keep if SliceThickness < 1 mm\n",
+    "df_filtered = df_filtered[df_filtered['SliceThickness'] < 0.8]\n",
+    "print(f\"After SliceThickness filter: {df_filtered['StudyFolder'].nunique()} studies\")\n",
+    "\n",
     "# keep if ContrastBolusAgent is not null\n",
-    "df = df[df['ContrastBolusAgent'].notnull()]\n",
-    "# SpacingBetweenSlices > 0\n",
-    "df = df[df['SpacingBetweenSlices'] > 0]"
+    "#df_filtered = df_filtered[df_filtered['ContrastBolusAgent'].notnull()]\n",
+    "#print(f\"After ContrastBolusAgent filter: {df_filtered['StudyFolder'].nunique()} studies\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f1a2a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show first 6 rows of duplicated StudyFolder\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "df_filtered[df_filtered.duplicated(subset=['StudyFolder'], keep=False)].sort_values(by=['StudyFolder']).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c5998c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered[\"SeriesDescription\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53110c2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# ---------- patterns ----------\n",
+    "RE_PCT = re.compile(r'(\\d{1,3})\\s*%')\n",
+    "RE_MS  = re.compile(r'(-?\\d{2,4})\\s*ms', flags=re.I)\n",
+    "\n",
+    "EXCLUDE_PATS = [\n",
+    "    r'(?i)\\b(smart\\s*score|calcium|CAC)\\b',\n",
+    "    r'(?i)\\b(no\\s*contrast|non[-\\s]?contrast|w/o\\b)',\n",
+    "    r'(?i)\\b(timing|test)\\s*bolus\\b',\n",
+    "    r'(?i)\\b(localizer|scout|topogram|dose|screen\\s*save)\\b',\n",
+    "    r'(?i)\\b(FL\\s*CHEST|CHEST\\s*WITHOUT|NON\\s*CONTRAST\\s*CHEST|FOV\\s*CHEST)\\b',\n",
+    "    r'(?i)\\b(MPR|curved|VR|VRT|3D|minIP|maxIP|avgIP)\\b',\n",
+    "]\n",
+    "\n",
+    "# Broader Siemens/“coronary” hints beyond literal \"CTA with con\"\n",
+    "INCLUDE_PATS = [\n",
+    "    r'(?i)\\bCTA\\b',\n",
+    "    r'(?i)\\bCorCTA\\b',\n",
+    "    r'(?i)\\bCoronary\\s*CTA\\b',\n",
+    "    r'(?i)\\bGATED\\s*CTA\\b',\n",
+    "    r'(?i)\\bDS[_ ]?CorCTA\\b',\n",
+    "    r'(?i)\\bDS[_ ]?CorAdSeq\\b',\n",
+    "    r'(?i)\\bFl[_ ]?CorCTA\\b',\n",
+    "    r'(?i)\\bHEARTFLOW\\b',\n",
+    "    r'(?i)\\bBestDiast\\b',\n",
+    "    r'(?i)\\bRETRO\\b',\n",
+    "    r'(?i)\\b(0\\.6(25)?\\s*mm?)\\b',\n",
+    "    r'(?i)\\bBv\\d+\\b',   # vascular kernel\n",
+    "]\n",
+    "\n",
+    "def has_any(s, pats): return any(re.search(p, str(s)) for p in pats)\n",
+    "\n",
+    "# ---------- gates ----------\n",
+    "def is_hard_excluded(desc: str) -> bool:\n",
+    "    return has_any(desc, EXCLUDE_PATS)\n",
+    "\n",
+    "def is_likely_coronary(desc: str) -> bool:\n",
+    "    # Inclusion is generous; primary filtering is via exclusions.\n",
+    "    return has_any(desc, INCLUDE_PATS)\n",
+    "\n",
+    "def image_type_preference(itype) -> int:\n",
+    "    # Prefer ORIGINAL/PRIMARY/AXIAL; do not drop if missing.\n",
+    "    if isinstance(itype, (list, tuple)): it = set(map(str.upper, itype))\n",
+    "    else: it = {str(itype).upper()}\n",
+    "    sc = 0\n",
+    "    if 'ORIGINAL' in it: sc += 12\n",
+    "    if 'PRIMARY'  in it: sc += 10\n",
+    "    if 'AXIAL'    in it: sc += 8\n",
+    "    if 'DERIVED'  in it: sc -= 10\n",
+    "    if 'SECONDARY' in it: sc -= 8\n",
+    "    return sc\n",
+    "\n",
+    "# ---------- feature extractors ----------\n",
+    "def parse_phase_pct(s):\n",
+    "    m = RE_PCT.search(str(s)); return float(m.group(1)) if m else np.nan\n",
+    "\n",
+    "def parse_ms_phase(s):\n",
+    "    m = RE_MS.search(str(s)); return float(m.group(1)) if m else np.nan\n",
+    "\n",
+    "def parse_nominal_thickness(s):\n",
+    "    m = re.search(r'(?<!\\d)(0\\.\\d{1,3})\\s*mm?', str(s), flags=re.I)\n",
+    "    return float(m.group(1)) if m else np.nan\n",
+    "\n",
+    "# ---------- scoring ----------\n",
+    "def kernel_score(desc):\n",
+    "    s = str(desc); sc = 0\n",
+    "    if re.search(r'(?i)\\bBv40\\b', s): sc += 10   # vascular\n",
+    "    if re.search(r'(?i)\\bBr4\\d\\b', s): sc -= 5   # bone\n",
+    "    if re.search(r'(?i)\\bTHIN(S)?\\b', s): sc += 4\n",
+    "    if re.search(r'(?i)\\bVS\\d+\\b', s): sc += 3\n",
+    "    return sc\n",
+    "\n",
+    "def fov_score(desc):\n",
+    "    s = str(desc); sc = 0\n",
+    "    if re.search(r'(?i)\\bTRUE\\s*STACK\\b', s): sc += 8\n",
+    "    if re.search(r'(?i)\\bHEART\\s*ONLY\\b', s): sc += 6\n",
+    "    if re.search(r'(?i)\\bFULL\\s*FOV\\b', s):  sc -= 3\n",
+    "    return sc\n",
+    "\n",
+    "def phase_pref_score(desc, hr_hint=None):\n",
+    "    pct = parse_phase_pct(desc); ms = parse_ms_phase(desc); s = str(desc)\n",
+    "    base = 0\n",
+    "    if re.search(r'(?i)\\bBestDiast\\b', s): base += 18\n",
+    "    if re.search(r'(?i)\\bBestSyst\\b', s): base -= 6\n",
+    "    if not np.isnan(ms): base += (8 if ms < 0 else -3)\n",
+    "    # prefer ~75%; if HR>65 and label is systolic, allow ~45%\n",
+    "    target = 75.0\n",
+    "    if hr_hint is not None and hr_hint > 65 and re.search(r'(?i)\\bBestSyst\\b', s):\n",
+    "        target = 45.0\n",
+    "    if not np.isnan(pct): base += 16 * np.exp(-((pct - target)**2) / (2*10**2))\n",
+    "    # ranges worse than single explicit phases\n",
+    "    if re.search(r'\\d+\\s*-\\s*\\d+\\s*%', s): base -= 4\n",
+    "    return base\n",
+    "\n",
+    "def thickness_score(desc, slice_thickness):\n",
+    "    v = np.nan\n",
+    "    if slice_thickness is not None:\n",
+    "        try: v = float(slice_thickness)\n",
+    "        except: pass\n",
+    "    if np.isnan(v): v = parse_nominal_thickness(desc)\n",
+    "    if np.isnan(v): return 0.0\n",
+    "    return min(2.0, max(0.0, 1.0/v)) * 10.0  # ~10 @0.5mm; ~6.7 @0.75mm\n",
+    "\n",
+    "def nimg_score(n):\n",
+    "    try: n = int(n); return min(n, 1200) * 0.008\n",
+    "    except: return 0.0\n",
+    "\n",
+    "def score_row(row, hr_hint=None):\n",
+    "    desc = row.get('SeriesDescription','')\n",
+    "    sc = 0\n",
+    "    # validity: exclude hard negatives heavily; include likely coronary positively\n",
+    "    sc += -300 if is_hard_excluded(desc) else 0\n",
+    "    sc +=  50  if is_likely_coronary(desc) else 0\n",
+    "    sc += image_type_preference(row.get('ImageType', []))\n",
+    "    sc += kernel_score(desc)\n",
+    "    sc += fov_score(desc)\n",
+    "    sc += phase_pref_score(desc, hr_hint=hr_hint)\n",
+    "    sc += thickness_score(desc, row.get('SliceThickness', None))\n",
+    "    sc += nimg_score(row.get('NumImages', None))\n",
+    "    # tiny bump for HEARTFLOW export\n",
+    "    if re.search(r'(?i)\\bHEARTFLOW\\b', str(desc)): sc += 3\n",
+    "    return sc\n",
+    "\n",
+    "# ---------- main with staged fallback + diagnostics ----------\n",
+    "def select_best_ccta_per_study_gentle(df, hr_hint=None, verbose=True):\n",
+    "    req = {'StudyFolder','ImageType','SeriesDescription'}\n",
+    "    miss = req - set(df.columns)\n",
+    "    if miss: raise ValueError(f\"Missing required columns: {miss}\")\n",
+    "    d = df.copy()\n",
+    "\n",
+    "    # Stage A: primary candidates = NOT hard-excluded AND likely coronary\n",
+    "    A_mask = (~d['SeriesDescription'].apply(is_hard_excluded)) & (d['SeriesDescription'].apply(is_likely_coronary))\n",
+    "    candA = d[A_mask].copy()\n",
+    "    candA['__score__'] = candA.apply(lambda r: score_row(r, hr_hint=hr_hint), axis=1)\n",
+    "\n",
+    "    # For studies missing in A, Stage B: allow anything NOT hard-excluded, then score\n",
+    "    missing_studies = set(d['StudyFolder']) - set(candA['StudyFolder'])\n",
+    "    if missing_studies:\n",
+    "        candB = d[(~d['SeriesDescription'].apply(is_hard_excluded)) & (d['StudyFolder'].isin(missing_studies))].copy()\n",
+    "        candB['__score__'] = candB.apply(lambda r: score_row(r, hr_hint=hr_hint), axis=1)\n",
+    "        cand = pd.concat([candA, candB], ignore_index=True)\n",
+    "    else:\n",
+    "        cand = candA\n",
+    "\n",
+    "    # Sort + pick top per StudyFolder (tie-breakers inside score; secondary keys below)\n",
+    "    def _slice_for_sort(desc, st):\n",
+    "        v = None\n",
+    "        try:\n",
+    "            if st is not None and not pd.isna(st): v = float(st)\n",
+    "        except: v = None\n",
+    "        if v is None or np.isnan(v): v = parse_nominal_thickness(desc)\n",
+    "        return np.inf if (v is None or np.isnan(v)) else v\n",
+    "\n",
+    "    cand['__slice__'] = [ _slice_for_sort(dsc, st) for dsc, st in zip(cand['SeriesDescription'], cand.get('SliceThickness', np.nan)) ]\n",
+    "    def _nimg(x):\n",
+    "        try: return int(x)\n",
+    "        except: return -1\n",
+    "    cand['__nimg__']  = cand.get('NumImages', pd.Series([-1]*len(cand))).apply(_nimg)\n",
+    "    def _sno(x):\n",
+    "        try: return int(x)\n",
+    "        except: return 10**9\n",
+    "    cand['__sno__']   = cand.get('SeriesNumber', pd.Series([None]*len(cand))).apply(_sno)\n",
+    "\n",
+    "    cand = cand.sort_values(by=['StudyFolder','__score__','__slice__','__nimg__','__sno__'],\n",
+    "                            ascending=[True, False, True, False, True])\n",
+    "    best = cand.groupby('StudyFolder', as_index=False).head(1)\n",
+    "\n",
+    "    # Diagnostics\n",
+    "    if verbose:\n",
+    "        n_total = d['StudyFolder'].nunique()\n",
+    "        n_A = candA['StudyFolder'].nunique()\n",
+    "        n_best = best['StudyFolder'].nunique()\n",
+    "        print(f\"[Selector] Total studies: {n_total} | Selected in Stage A: {n_A} | Final covered: {n_best}\")\n",
+    "        # Show top reasons for initial exclusion\n",
+    "        dropped = d[~A_mask]\n",
+    "        dropped_reasons = {\n",
+    "            'hard_exclude': dropped['SeriesDescription'].apply(is_hard_excluded).sum(),\n",
+    "            'not_likely_coronary': (~dropped['SeriesDescription'].apply(is_likely_coronary)).sum()\n",
+    "        }\n",
+    "        print(f\"[Selector] Stage A dropped counts: {dropped_reasons}\")\n",
+    "        # Examples for auditing (first few per bucket)\n",
+    "        ex_not_cor = dropped[~dropped['SeriesDescription'].apply(is_likely_coronary)].head(10)['SeriesDescription'].tolist()\n",
+    "        ex_hard = dropped[dropped['SeriesDescription'].apply(is_hard_excluded)].head(10)['SeriesDescription'].tolist()\n",
+    "        print(\"[Selector] Examples not_likely_coronary:\", ex_not_cor)\n",
+    "        print(\"[Selector] Examples hard_exclude:\", ex_hard)\n",
+    "\n",
+    "    # Clean temp cols for return\n",
+    "    best_clean = best.drop(columns=[c for c in best.columns if c.startswith('__')], errors='ignore')\n",
+    "    cand_clean = cand.drop(columns=[c for c in cand.columns if c.startswith('__')], errors='ignore')\n",
+    "    return best_clean, cand_clean\n",
+    "\n",
+    "# ---- RUN ----\n",
+    "best_per_study, ranked = select_best_ccta_per_study_gentle(df_filtered, hr_hint=None, verbose=True)\n",
+    "\n",
+    "# Quick sanity peek\n",
+    "print(best_per_study[['StudyFolder','SeriesDescription']].head(20))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76c38be7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_per_study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc2b85fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_per_study[\"StudyFolder\"].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa6780c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered[\"SeriesDescription\"].unique().tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cb0fb4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using SimpleITK, visualize df_filtered[\"RepresentativeFile\"].iloc[0]\n",
+    "import os\n",
+    "import SimpleITK as sitk\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# ----------------------------\n",
+    "# INPUT: any one DICOM file (representative slice) from df_filtered\n",
+    "# ----------------------------\n",
+    "example_file = df_filtered[\"RepresentativeFile\"].iloc[4]\n",
+    "\n",
+    "# ----------------------------\n",
+    "# Helper: read DICOM header (no pixels) with SimpleITK\n",
+    "# ----------------------------\n",
+    "def read_dicom_header(filepath, load_private=True):\n",
+    "    reader = sitk.ImageFileReader()\n",
+    "    reader.SetFileName(filepath)\n",
+    "    if load_private:\n",
+    "        # enable private tag reading where supported\n",
+    "        try:\n",
+    "            reader.LoadPrivateTagsOn()\n",
+    "        except Exception:\n",
+    "            pass\n",
+    "    reader.ReadImageInformation()\n",
+    "    tags = {}\n",
+    "    for key in reader.GetMetaDataKeys():\n",
+    "        try:\n",
+    "            tags[key] = reader.GetMetaData(key)\n",
+    "        except Exception:\n",
+    "            tags[key] = \"<unreadable>\"\n",
+    "    return tags\n",
+    "\n",
+    "header = read_dicom_header(example_file, load_private=True)\n",
+    "\n",
+    "# Print header (key -> value)\n",
+    "for key in sorted(header.keys()):\n",
+    "    print(f\"{key}: {header[key]}\")\n",
+    "\n",
+    "# ----------------------------\n",
+    "# QUICK VIEW: show this single file\n",
+    "# ----------------------------\n",
+    "img_2d = sitk.ReadImage(example_file)      # will decode JPEG Lossless etc.\n",
+    "arr_2d = sitk.GetArrayFromImage(img_2d)    # shape: (1, H, W) or (H, W) depending on reader\n",
+    "arr_show = arr_2d[0] if arr_2d.ndim == 3 else arr_2d\n",
+    "\n",
+    "plt.figure(figsize=(6,6))\n",
+    "plt.imshow(arr_show, cmap=\"gray\")\n",
+    "plt.title(os.path.basename(example_file))\n",
+    "plt.axis(\"off\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a34d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import SimpleITK as sitk\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# You can limit to first N for sanity check, e.g. df.head(10)\n",
+    "files = df_filtered[\"RepresentativeFile\"].iloc[1]\n",
+    "\n",
+    "print(f\"Rendering {len(files)} representative DICOMs...\")\n",
+    "\n",
+    "for path in tqdm(files):\n",
+    "    try:\n",
+    "        img = sitk.ReadImage(path)\n",
+    "        arr = sitk.GetArrayFromImage(img)  # shape: (slices, height, width)\n",
+    "        arr2d = arr[0] if arr.ndim == 3 else arr  # take first slice if 3D\n",
+    "        plt.figure(figsize=(5, 5))\n",
+    "        plt.imshow(arr2d, cmap=\"gray\")\n",
+    "        plt.title(path.split('/')[-3])  # e.g. E100**** folder\n",
+    "        plt.axis(\"off\")\n",
+    "        plt.show()\n",
+    "    except Exception as e:\n",
+    "        print(f\"[WARN] Could not read {path}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dce85ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort by StudyFolder and ImageType\n",
+    "df_filtered = df_filtered.sort_values(by=['StudyFolder', 'ImageType'])\n",
+    "df_filtered[['StudyFolder', 'ImageType', 'SeriesDescription']].head(5)"
    ]
   },
   {
@@ -80,7 +434,7 @@
    "outputs": [],
    "source": [
     "#ContrastBolusAgent\n",
-    "print(df['ContrastBolusAgent'].value_counts())"
+    "print(df_filtered['ContrastBolusAgent'].value_counts())"
    ]
   },
   {
@@ -139,7 +493,7 @@
     "# ----------------------------\n",
     "# CONFIG: point to any one DICOM file from the series\n",
     "# ----------------------------\n",
-    "example_file = df[\"RepresentativeFile\"].iloc[0]\n",
+    "example_file = df_filtered[\"RepresentativeFile\"].iloc[0]\n",
     "\n",
     "# ----------------------------\n",
     "# Helper: read DICOM header (no pixels) with SimpleITK\n",
@@ -274,7 +628,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "# You can limit to first N for sanity check, e.g. df.head(10)\n",
-    "files = df[\"RepresentativeFile\"].tolist()\n",
+    "files = df_filtered[\"RepresentativeFile\"].iloc[0]\n",
     "\n",
     "print(f\"Rendering {len(files)} representative DICOMs...\")\n",
     "\n",
